fixing organization styling wrapping issue

--- a/projects/storefrontstyles/scss/components/organization/cost-centers/_cost-center-details.scss
+++ b/projects/storefrontstyles/scss/components/organization/cost-centers/_cost-center-details.scss
@@ -1,5 +1,5 @@
-@import '../organization-form';
+@import '../organization-details';
 
 %cx-cost-center-details {
-  @extend %cx-organization-form;
+  @extend %cx-organization-details;
 }
